# GrowOS

./: .gdbinit  .gitignore  .gitmodules  Bashrc  CMakeLists.txt  DEVELOPER.md  INSTALL  INSTALL.md  Makefile  README  README.md  WELCOME.md  debug.yaml  esphome.yaml  gosInit.yaml  growOS.code-workspace  install.sh  local.yaml  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
.github/: FUNDING.yml
CPU0/: CMakeLists.txt  Makefile  sdkconfig.defaults
apps/: grow.yaml
components/globals/: CMakeLists.txt  globals.cpp  globals.h
cpu0/: CMakeLists.txt
cpu1/: CMakeLists.txt  Makefile  sdkconfig.defaults
esphome/: .gitignore  Bashrc  Makefile  Makefile.bsps  README  app0.yaml  app1.yaml  boot.yaml  boot0.yaml  boot1.yaml  config.h  configAll.h  cpu.h  cpu0.h  cpu0.yaml  cpu1.h  cpu1.yaml  debug.yaml  display.yaml  displayBlocks.yaml  env.yaml  esp-idf.c  esphome.yaml  globals.yaml  gos.h  gosInit.yaml  images.yaml  init.yaml  lvglMain.yaml  lvglTheme.yaml  lvglUi.yaml  main.yaml  main0.yaml  main1.yaml  makeall.sh  makefile  menu.yaml  nativeUiInit.yaml  network.yaml  numbers.yaml  (+9 more)
gos/: debug.yaml  env.yaml  gos.h  gos.yaml  network.yaml
gui/: images.yaml  lvglMain.yaml  menu.yaml  (+5 more)
main/: CMakeLists.txt  Kconfig.projbuild  backupMode.cpp  backupMode.h  buttons.cpp  buttons.h  common.cpp  common.h  esp32SystemAPIHandler.cpp  esp32SystemAPIHandler.h  firebase_Funcs.cpp  firebase_Funcs.h  flashStorage.cpp  flashStorage.h  global_Defines.h  globals.cpp  globals.h  gpio.cpp  gpio.h  helperFuncs.cpp  helperFuncs.h  icons.h  lcd.cpp  lcd.h  main.cpp  pages.cpp  pages.h  pages_scheduling.cpp  pages_scheduling.h  program  rtc.cpp  rtc.h  schedule.cpp  schedule.h  timerFanControl.cpp  timerFanControl.h  wifi.cpp  wifi.h  wifi_Funcs.cpp  wifi_Funcs.h
main/Fonts/: FreeSans9pt7b.h
(+174 files in other folders)
